--- a/web/css/site.css
+++ b/web/css/site.css
@@ -105,23 +105,9 @@ a.desc:after {
 }
 
 .icon-wrapper {
-    display: inline-block;
     position: relative;
-}
-
-.icon-wrapper .image-box {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 100%;
-    background-color: #f0f0f0;
-    /* Add background color for the image box */
-    padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    white-space: nowrap;
-    /* Prevent line breaks inside the box */
-    overflow: hidden;
-    /* Hide any content that exceeds the box dimensions */
+    display: inline-block;
+    cursor: pointer;
 }
 
 .card-header {
