--- a/web/css/main.css
+++ b/web/css/main.css
@@ -44,7 +44,7 @@ html {
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: Roboto, sans-serif;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -129,7 +129,7 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -603,86 +603,6 @@ select {
 [type='file']:focus {
   outline: 1px solid ButtonText;
   outline: 1px auto -webkit-focus-ring-color;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-  height: 1rem;
-  width: 1rem;
-  border-radius: 9999px;
-  border: 0;
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  cursor: pointer;
-}
-
-.dark input[type="range"]::-webkit-slider-thumb {
-}
-
-input[type="range"]:disabled::-webkit-slider-thumb {
-}
-
-input[type="range"]:disabled:focus::-webkit-slider-thumb {
-}
-
-input[type="range"]:disabled:active::-webkit-slider-thumb {
-}
-
-.dark input[type="range"]:disabled::-webkit-slider-thumb {
-}
-
-.dark input[type="range"]:disabled:focus::-webkit-slider-thumb {
-}
-
-.dark input[type="range"]:disabled:active::-webkit-slider-thumb {
-}
-
-input[type="range"]::-moz-range-thumb {
-  height: 1rem;
-  width: 1rem;
-  border-radius: 9999px;
-  border: 0;
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  cursor: pointer;
-}
-
-.dark input[type="range"]::-moz-range-thumb {
-}
-
-input[type="range"]:disabled::-moz-range-thumb {
-}
-
-.dark input[type="range"]:disabled::-moz-range-thumb {
-}
-
-input[type="range"]::-moz-range-progress {
-}
-
-input[type="range"]::-ms-fill-lower {
-}
-
-.dark input[type="range"]::-moz-range-progress {
-}
-
-.dark input[type="range"]::-ms-fill-lower {
-}
-
-input[type="range"]:focus {
-  outline: none;
-}
-
-input[type="range"]:focus::-webkit-slider-thumb {
-}
-
-input[type="range"]:active::-webkit-slider-thumb {
-}
-
-.dark input[type="range"]:focus::-webkit-slider-thumb {
-}
-
-.dark input[type="range"]:active::-webkit-slider-thumb {
 }
 
 .tooltip-arrow,.tooltip-arrow:before {
@@ -1252,12 +1172,6 @@ input:checked + .toggle-bg {
   width: 100%;
 }
 
-@media (min-width: 320px) {
-  .container {
-    max-width: 320px;
-  }
-}
-
 @media (min-width: 640px) {
   .container {
     max-width: 640px;
@@ -1496,10 +1410,6 @@ input:checked + .toggle-bg {
   top: 100%;
 }
 
-.isolate {
-  isolation: isolate;
-}
-
 .\!z-40 {
   z-index: 40 !important;
 }
@@ -1685,6 +1595,10 @@ input:checked + .toggle-bg {
   margin-bottom: 1.25rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -1767,6 +1681,10 @@ input:checked + .toggle-bg {
 
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-5 {
@@ -2201,10 +2119,6 @@ input:checked + .toggle-bg {
   min-width: 64px;
 }
 
-.max-w-4xl {
-  max-width: 56rem;
-}
-
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -2239,14 +2153,6 @@ input:checked + .toggle-bg {
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-3xl {
-  max-width: 48rem;
 }
 
 .flex-1 {
@@ -2403,129 +2309,36 @@ input:checked + .toggle-bg {
   transform: none;
 }
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
 .animate-\[fade-in_0\.15s_both\] {
   animation: fade-in 0.15s both;
-}
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
 }
 
 .animate-\[fade-in_0\.3s_both\] {
   animation: fade-in 0.3s both;
 }
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
 .animate-\[fade-in_350ms_ease-in-out\] {
   animation: fade-in 350ms ease-in-out;
-}
-
-@keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
 }
 
 .animate-\[fade-out_0\.15s_both\] {
   animation: fade-out 0.15s both;
 }
 
-@keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
 .animate-\[fade-out_0\.3s_both\] {
   animation: fade-out 0.3s both;
-}
-
-@keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
 }
 
 .animate-\[fade-out_350ms_ease-in-out\] {
   animation: fade-out 350ms ease-in-out;
 }
 
-@keyframes progress {
-  0% {
-    transform: translateX(-45%);
-  }
-
-  100% {
-    transform: translateX(100%);
-  }
-}
-
 .animate-\[progress_3s_ease-in-out_infinite\] {
   animation: progress 3s ease-in-out infinite;
 }
 
-@keyframes show-up-clock {
-  0% {
-    opacity: 0;
-    transform: scale(0.7);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
 .animate-\[show-up-clock_350ms_linear\] {
   animation: show-up-clock 350ms linear;
-}
-
-@keyframes spinner-grow {
-  0% {
-    transform: scale(0);
-  }
-
-  50% {
-    transform: none;
-    opacity: 1;
-  }
 }
 
 .animate-\[spinner-grow_0\.75s_linear_infinite\] {
@@ -2585,6 +2398,10 @@ input:checked + .toggle-bg {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-4 {
@@ -2655,10 +2472,8 @@ input:checked + .toggle-bg {
   gap: 1rem;
 }
 
-.-space-x-px > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(-1px * var(--tw-space-x-reverse));
-  margin-left: calc(-1px * calc(1 - var(--tw-space-x-reverse)));
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2671,6 +2486,12 @@ input:checked + .toggle-bg {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -2828,11 +2649,6 @@ input:checked + .toggle-bg {
   border-bottom-left-radius: 0.5rem;
 }
 
-.rounded-l-md {
-  border-top-left-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
-}
-
 .rounded-r-\[0\.25rem\] {
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
@@ -2841,11 +2657,6 @@ input:checked + .toggle-bg {
 .rounded-r-lg {
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-}
-
-.rounded-r-md {
-  border-top-right-radius: 0.375rem;
-  border-bottom-right-radius: 0.375rem;
 }
 
 .rounded-s-lg {
@@ -2976,11 +2787,6 @@ input:checked + .toggle-bg {
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -3017,16 +2823,6 @@ input:checked + .toggle-bg {
 .\!bg-\[\#858585\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(133 133 133 / var(--tw-bg-opacity)) !important;
-}
-
-.\!bg-danger-100 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(250 229 233 / var(--tw-bg-opacity)) !important;
-}
-
-.\!bg-success-100 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(214 250 228 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-\[\#00000012\] {
@@ -3501,7 +3297,7 @@ input:checked + .toggle-bg {
 }
 
 .font-mono {
-  font-family: ui-monospace, monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-2xl {
@@ -3576,6 +3372,11 @@ input:checked + .toggle-bg {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
 }
 
 .font-black {
@@ -3696,11 +3497,6 @@ input:checked + .toggle-bg {
   color: rgb(220 76 100 / var(--tw-text-opacity)) !important;
 }
 
-.\!text-danger-700 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(176 35 58 / var(--tw-text-opacity)) !important;
-}
-
 .\!text-gray-50 {
   --tw-text-opacity: 1 !important;
   color: rgb(249 250 251 / var(--tw-text-opacity)) !important;
@@ -3709,11 +3505,6 @@ input:checked + .toggle-bg {
 .\!text-primary {
   --tw-text-opacity: 1 !important;
   color: rgb(52 152 219 / var(--tw-text-opacity)) !important;
-}
-
-.\!text-success-700 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(14 117 55 / var(--tw-text-opacity)) !important;
 }
 
 .\!text-white {
@@ -4542,11 +4333,6 @@ a.desc:after {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
@@ -4611,6 +4397,10 @@ a.desc:after {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
 .hover\:\!opacity-90:hover {
   opacity: 0.9 !important;
 }
@@ -4650,10 +4440,6 @@ a.desc:after {
   --tw-shadow: 0px 0px 0px 13px rgba(0,0,0,0.6);
   --tw-shadow-colored: 0px 0px 0px 13px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.focus\:z-20:focus {
-  z-index: 20;
 }
 
 .focus\:rounded-\[50\%\]:focus {
@@ -4736,19 +4522,9 @@ a.desc:after {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.focus\:shadow-te-primary:focus {
-  --tw-shadow: 0 0 0 1px rgb(59, 113, 202);
-  --tw-shadow-colored: 0 0 0 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.focus\:outline-offset-0:focus {
-  outline-offset: 0px;
 }
 
 .focus\:ring-0:focus {
@@ -5504,6 +5280,10 @@ a.desc:after {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+:is([dir="rtl"] .rtl\:space-x-reverse) > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 1;
+}
+
 :is([dir="rtl"] .rtl\:\[direction\:rtl\]) {
   direction: rtl;
 }
@@ -5511,17 +5291,6 @@ a.desc:after {
 @media (prefers-reduced-motion: reduce) {
   .motion-reduce\:transform-none {
     transform: none;
-  }
-
-  @keyframes spinner-grow {
-    0% {
-      transform: scale(0);
-    }
-
-    50% {
-      transform: none;
-      opacity: 1;
-    }
   }
 
   .motion-reduce\:animate-\[spinner-grow_1\.5s_linear_infinite\] {
@@ -5592,6 +5361,11 @@ a.desc:after {
 
 :is(.dark .dark\:bg-gray-800\/50) {
   background-color: rgb(31 41 55 / 0.5);
+}
+
+:is(.dark .dark\:bg-gray-900) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:bg-gray-900\/80) {
@@ -5835,14 +5609,6 @@ a.desc:after {
     margin-right: auto;
   }
 
-  .sm\:flex {
-    display: flex;
-  }
-
-  .sm\:hidden {
-    display: none;
-  }
-
   .sm\:w-full {
     width: 100%;
   }
@@ -5851,20 +5617,12 @@ a.desc:after {
     max-width: 24rem;
   }
 
-  .sm\:flex-1 {
-    flex: 1 1 0%;
-  }
-
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .sm\:items-center {
-    align-items: center;
-  }
-
-  .sm\:justify-between {
-    justify-content: space-between;
+  .sm\:justify-center {
+    justify-content: center;
   }
 
   .sm\:px-3 {
@@ -5875,6 +5633,10 @@ a.desc:after {
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:text-center {
+    text-align: center;
   }
 
   .sm\:text-sm {
@@ -5905,12 +5667,16 @@ a.desc:after {
     margin-left: 1.5rem;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:block {
     display: block;
   }
 
-  .md\:inline-flex {
-    display: inline-flex;
+  .md\:flex {
+    display: flex;
   }
 
   .md\:hidden {
@@ -5921,8 +5687,20 @@ a.desc:after {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
   }
 
   .md\:pr-1 {
@@ -5943,41 +5721,14 @@ a.desc:after {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
+  .lg\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
 }
 
 @media (min-width: 320px) {
-  @media not all and (min-width: 768px) {
-    @media (orientation: landscape) {
-      .xs\:max-md\:landscape\:mt-24 {
-        margin-top: 6rem;
-      }
-
-      .xs\:max-md\:landscape\:h-8 {
-        height: 2rem;
-      }
-
-      .xs\:max-md\:landscape\:h-\[360px\] {
-        height: 360px;
-      }
-
-      .xs\:max-md\:landscape\:h-full {
-        height: 100%;
-      }
-
-      .xs\:max-md\:landscape\:w-8 {
-        width: 2rem;
-      }
-
-      .xs\:max-md\:landscape\:w-\[475px\] {
-        width: 475px;
-      }
-
-      .xs\:max-md\:landscape\:flex-row {
-        flex-direction: row;
-      }
-    }
-  }
-
   @media (max-width: 825px) {
     @media (orientation: landscape) {
       .min-\[320px\]\:max-\[825px\]\:landscape\:h-auto {
